--- a/BayrakBilmece/Ekle.resx
+++ b/BayrakBilmece/Ekle.resx
@@ -136,35 +136,36 @@
         j2r/AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA3CAYAAAA/prfZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EgAACxIB0t1+/AAAAjRJREFUeF7t1ltqk2EUheEMIUPwWtQGqShSMRTFokiDUipKMVhEMbaNqbVJ2qbb
-        8/mQpvPpEBxCh5AhLNffRvAwgn/zbngu1nf/wlf597S/W7U6gNI4Mcn3/9NoUNP+4MAEoHQO3HB9kvPx
-        abRds7FGOwJQZtuNSdYOe2/rpwlA6Y21169WNOzVNOwLQBa9ZkU/uk0Nux4AkgiHvRkmAGk47O8bYQKQ
-        hsP+th4mAGkUYXccdscDQBIO+2s7TADScNhf1sIEIA2H/XklTADSKMJuOeyWB4AkHPanJ2ECkIbD/vg4
-        TADScNgfHoUJQBoO+/3DMAFIowh72WEvewBIwmG/exAmAGk47LfNMAFIw2G/uR8mAGkUYS857CUPAEk4
-        7Nf3wgQgDYf96m6YAKThsF/eCROANIqwFx32ogeAJBx2LIQJQBoOe/d2mACk4bAHt8IEIA2HvdMIE4A0
-        irDnHfa8B4AkHPb2zTABSMNhb90IE4A0HHb/epgApFGEPeew5zwAJOGwe9fCBCANh929GiYAaTjszSth
-        ApBGEfasw571AJCEw35RDxOANBz2xuUwAUjDYT+/FCYAaRRhzzjsGQ8ASTjs9YthApCGw+5cCBOANBz2
-        s/NhApCGw26fCxOANIqwpx32tAeAJBz22tm2CUAaDnu1VjcBSKNdKU4rU4cmAKU31upUdRL26Yb5EUC5
-        nWkeRf379PRUww5NAEpnbH9H/eepdbJubQsApVA0e/z9PrpK5RfopY7Y+ozVFgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA2CAYAAAD0+mR8AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJJSURBVHhe7dPrThcEGMfxR6VATATNyJGBZyQqwkQckjTn
+        nGttzDnnWnNuzrV0HVjr/e8OuIQugUvoEngFdDJSKzUrOmeCPv44vMg78P/s+90+l/CN/5efHu8x2ZR9
+        DuCJt/zq8rNjaxs/3sNP3pi0BNCwPlvbebUHE6N6ODGaABqbX55cmXrpw5H2Bx8dW7AEUEJPLH0wMmYJ
+        oAzF4pWjHy9ePZoAylDcf39YlgDK8NjvHZElgDIU/10ekiWAMhT3Lh2WJYAyFP9ePCRLAGUo/rkwKEsA
+        ZXjsd1+TJYAyFH+/MyBLAGUo/jr/qiwBlKH489zLsgRQhuKPs/2yBFCGxz7zkiwBlKH4fbxPlgDKUPz2
+        9kFZAihDsfBWrywBlKH49fQBWQIoQ/HLqX2yBFCGxz65V5YAylD8fGKPLAGUobj75m5ZAihD8dPxXbIE
+        UIbizmi3LAGU4bFHXpQlgDIUt4d3yhJAGYpbQy/IEkAZih9f75IlgDIUPwzukCWAMjz2wPOyBFCG4vtX
+        OmUJoAzFzf7nZAmgDMWNvu2yBFCG4nrvs7IEUIbiu/1bZQmgDI+9p0OWAMpQzO9ulyWAMhTfdm+RJYAy
+        FNd2tskSQBkeu2uzLAGUofhmxyZZAihD8XVnqywBlKH4avtGWQIoQ/HlthZZAijDY3c0yxJAGYov2p4a
+        twRQhmJuc1PP3DNNCaCM8VhutnXDlCWAhje9MvVysxvXt8+0rJ+2BNCwFvzywNrWq800r2s3zTy9btoS
+        QMOYX3nXD6/eHPEIYgB2MH+YhEQAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA3CAYAAAA/prfZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EgAACxIB0t1+/AAAAl1JREFUeF7t1gmLDgAUheFrsiSpSUlKIilJGTtZ+kK2LJMlS2IkEsmkiTThlJSk
-        lJjGkiVryJ4kIUmSJEmSkCRJRrJluy4GkT/w3d5Tz09469i/O+krC0EAikZ5KK1P+O8d+7K8/PjXFXXB
-        ARSdumi4sj7nnzvyqbr86OdqB1DcouU/cR/+uOxhcAAptLODH5YWggNI4v2SStv/tqrywLsqB5CGbO+b
-        xQoOIA3Z7teLFBxAGrKdrxYqOIA0ZNtfLlBwAGnItr6Yp+AA0pBtfj5XwQGkIat5NlvBAaQh2/h0loID
-        SEO24clMBQeQhmz94+kKDiAN2bpH0xQcQBqytQ+mKDiANGRr7k9ScABpyFbfm6DgANKQrbpbruAA0pDp
-        zlgFB5CGbMXt0QoOIA1Z9a2RCg4gDdmym8MVHEAasiU3hio4gDRkVdcHKziANGSLrxUUHEAaskVXByo4
-        gDRkC6/0V3AAacjmX+6r4ADSkM271FvBAaQhm3Oxp4IDSEM2+3w3BQeQhqziXFcFB5CGbMbZLgoOIA3Z
-        9DOdFRxAGrKppzspOIA0ZJNPdVRwAGnIJp7ooOAA0pCNP9ZewQGkIRt3pK2CA0hDNuZQGwUHkIZs1MHW
-        Cg4gDdmI/a0UHEAasmH7Wio4gDRkQ/a0UHAAacgKu0oVHEAaskE7mis4gDRkA7Y3qwgOIA1Zv21Ny4ID
-        SKPCvq/P5sYXggMoenV9tzQp/RF2r9pGZT1rG9YFB1C8etU2LPyI+td61JS0615TcrT7pgYOoMjUlFyI
-        hsvqc/7/yjZaAUDR+Hm9f8/sG9zFRMp0kIs3AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA3CAYAAAA/prfZAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAJdSURBVHhe7dYJiw4AFIXha7IkqUlJSiIpSRk7WfpCtiyT
+        JUtiJBLJpIk04ZSUpJSYxpIla8ieJCFJkiRJkpAkSUayZbsuBpE/8N3eU89PeOvYvzvpKwtBAIpGeSit
+        T/jvHfuyvPz41xV1wQEUnbpouLI+55878qm6/OjnagdQ3KLlP3Ef/rjsYXAAKbSzgx+WFoIDSOL9kkrb
+        /7aq8sC7KgeQhmzvm8UKDiAN2e7XixQcQBqyna8WKjiANGTbXy5QcABpyLa+mKfgANKQbX4+V8EBpCGr
+        eTZbwQGkIdv4dJaCA0hDtuHJTAUHkIZs/ePpCg4gDdm6R9MUHEAasrUPpig4gDRka+5PUnAAachW35ug
+        4ADSkK26W67gANKQ6c5YBQeQhmzF7dEKDiANWfWtkQoOIA3ZspvDFRxAGrIlN4YqOIA0ZFXXBys4gDRk
+        i68VFBxAGrJFVwcqOIA0ZAuv9FdwAGnI5l/uq+AA0pDNu9RbwQGkIZtzsaeCA0hDNvt8NwUHkIas4lxX
+        BQeQhmzG2S4KDiAN2fQznRUcQBqyqac7KTiANGSTT3VUcABpyCae6KDgANKQjT/WXsEBpCEbd6StggNI
+        QzbmUBsFB5CGbNTB1goOIA3ZiP2tFBxAGrJh+1oqOIA0ZEP2tFBwAGnICrtKFRxAGrJBO5orOIA0ZAO2
+        N6sIDiANWb9tTcuCA0ijwr6vz+bGF4IDKHp1fbc0Kf0Rdq/aRmU9axvWBQdQvHrVNiz8iPrXetSUtOte
+        U3K0+6YGDqDI1JRciIbL6nP+/8o2WgFA0fh5vX/P7BvcxUTKdJCLNwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
