--- a/BayrakBilmece/Giris.resx
+++ b/BayrakBilmece/Giris.resx
@@ -213,6 +213,121 @@
         ZCYzeWrkmWf+CO6XhymnO1PuAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA3CAYAAAA/prfZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAjRJREFUeF7t1ltqk2EUheEMIUPwWtQGqShSMRTFokiDUipKMVhEMbaNqbVJ2qbb
+        8/mQpvPpEBxCh5AhLNffRvAwgn/zbngu1nf/wlf597S/W7U6gNI4Mcn3/9NoUNP+4MAEoHQO3HB9kvPx
+        abRds7FGOwJQZtuNSdYOe2/rpwlA6Y21169WNOzVNOwLQBa9ZkU/uk0Nux4AkgiHvRkmAGk47O8bYQKQ
+        hsP+th4mAGkUYXccdscDQBIO+2s7TADScNhf1sIEIA2H/XklTADSKMJuOeyWB4AkHPanJ2ECkIbD/vg4
+        TADScNgfHoUJQBoO+/3DMAFIowh72WEvewBIwmG/exAmAGk47LfNMAFIw2G/uR8mAGkUYS857CUPAEk4
+        7Nf3wgQgDYf96m6YAKThsF/eCROANIqwFx32ogeAJBx2LIQJQBoOe/d2mACk4bAHt8IEIA2HvdMIE4A0
+        irDnHfa8B4AkHPb2zTABSMNhb90IE4A0HHb/epgApFGEPeew5zwAJOGwe9fCBCANh929GiYAaTjszSth
+        ApBGEfasw571AJCEw35RDxOANBz2xuUwAUjDYT+/FCYAaRRhzzjsGQ8ASTjs9YthApCGw+5cCBOANBz2
+        s/NhApCGw26fCxOANIqwpx32tAeAJBz22tm2CUAaDnu1VjcBSKNdKU4rU4cmAKU31upUdRL26Yb5EUC5
+        nWkeRf379PRUww5NAEpnbH9H/eepdbJubQsApVA0e/z9PrpK5RfopY7Y+ozVFgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA3CAYAAAA/prfZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAjRJREFUeF7t1ltqk2EUheEMIUPwWtQGqShSMRTFokiDUipKMVhEMbaNqbVJ2qbb
+        8/mQpvPpEBxCh5AhLNffRvAwgn/zbngu1nf/wlf597S/W7U6gNI4Mcn3/9NoUNP+4MAEoHQO3HB9kvPx
+        abRds7FGOwJQZtuNSdYOe2/rpwlA6Y21169WNOzVNOwLQBa9ZkU/uk0Nux4AkgiHvRkmAGk47O8bYQKQ
+        hsP+th4mAGkUYXccdscDQBIO+2s7TADScNhf1sIEIA2H/XklTADSKMJuOeyWB4AkHPanJ2ECkIbD/vg4
+        TADScNgfHoUJQBoO+/3DMAFIowh72WEvewBIwmG/exAmAGk47LfNMAFIw2G/uR8mAGkUYS857CUPAEk4
+        7Nf3wgQgDYf96m6YAKThsF/eCROANIqwFx32ogeAJBx2LIQJQBoOe/d2mACk4bAHt8IEIA2HvdMIE4A0
+        irDnHfa8B4AkHPb2zTABSMNhb90IE4A0HHb/epgApFGEPeew5zwAJOGwe9fCBCANh929GiYAaTjszSth
+        ApBGEfasw571AJCEw35RDxOANBz2xuUwAUjDYT+/FCYAaRRhzzjsGQ8ASTjs9YthApCGw+5cCBOANBz2
+        s/NhApCGw26fCxOANIqwpx32tAeAJBz22tm2CUAaDnu1VjcBSKNdKU4rU4cmAKU31upUdRL26Yb5EUC5
+        nWkeRf379PRUww5NAEpnbH9H/eepdbJubQsApVA0e/z9PrpK5RfopY7Y+ozVFgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB8AAAAfCAYAAAAfrhY5AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAadJREFUWEfFVwtxwzAUC4RCGIRCKIRACIHtWgZhMAiFUAiFUAiFMAirlJM323n+
+        pIlb3ekuztOz/I/TPYPPr9MFvHrsFWoPmP1GHBVqCxgdImPyW+H1QGV78EPFCSzTBPwBY3OSwz9IPgFl
+        6s/gTq/ykJiV0YSNYE85x7FZisyjqZ9zA/MNgMAZt+BVNnMgyGG1krbiXVY2IGjV82kKZZMGRJwfq4I1
+        vKn6PCBMrea1PMjCBgRDlJAiG+hOt7velXiWjQ0IWJmV6HMEg22DMhtdM2L2dkOAe9pK8HmUfAbEavLD
+        Yxgv3PCVWl5cNNDwcLFyfXJB02/PBEtgMdlrB2hqeu84LDHPr1bByEtxfGfPeya4i8Gr5tytsf+vJgsK
+        5rjtaveBYM3ZvmafB3eEAAhat5QU3fDVmJIX2aQBUe1xuZTl3QJR7fm+lMWbzA5s8Ukl81cpBFteo8jg
+        ghmAwUi8JfOfVAIivwEcqh5ccnvlDmAd/hSWjR2UzCn4myM88xDiHk/tBupn9zS8q/omVIEGMvO53R9L
+        CYb5a/7VCJjFf6lPDG3XPQBYbQpUD3LWsQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABwAAAAcCAYAAAByDd+UAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAhRJREFUSEullt1xAjEMhK8ECsgDDymAEighJVACJdABJVACJVACJVBBJiUk+93Z
+        Plkng4/szE6MfixZkp0bevH98bkXT+JVvBlexKO4TabvQ5tsRIL8iL8dJIGv5L4OOIq9gTwJ3H9iGVOm
+        aKPMh8imkS6TZPdpyzZk1AqGfFEuybbiQbyLkV+7xFLSL+/QXR7ZRW3g9y6ZzJCQKbSG8JLU3ZAPJ/an
+        vSf1DAl9T1YHy5Av0+1Pekjq8HQMxSbpcM4Zn0cHA8l2IvaVXuvFnkk1Kv2glGy09n0tJ9eaYP4kpd9a
+        +6pNA6SFdZozEfSbV8Q6QRKMgsGxMkBrhsjqzghpci10kKw18p5znxKc/obA1/qYbAsks31scREMSG7L
+        +ogChq+D5M+ChsGAdFUf1wRs9Qw2r5B0LwOekm2BZM+CZYZBJbdVuSOgVNbxmmxH6DdDFQXLd8+yCqrf
+        8d5a2CzY3I529L7yWLd6au8hdlY3DaQWZ6coZdXa30P7KERBbbK+ClMyLJyCU9pMOSXNj/49EZSEK73W
+        PtFbUk2QwD9vZF6yXQP5+UGE9fRLQKZ+OFYHlT198/tUg1gghX/7IM7Ni50hG9oSfS08T1pKP1mZDAC9
+        IilKxt3kL/Z8OkY+fRWS0X++2DLXtUPGlKh6ljpJoovXqhtypmz05tWJKTlX4a3JDqHN6Bs9415mUv6u
+        r7phGIY/z++TvIppuUAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA2CAYAAAD0+mR8AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAASlJREFUeF7t11GNwlAQhtFKqJRKQAKPu+EFKTiohJWwEpCwEpCABJgLJds0COD+
+        OZOcpJ3bPn5pOqzn6/uwLz/lDHRjLtOS8f/UclweuAHdmpekn1OL380DQJ9Or6inzQHQr2sZW9in1RLo
+        307YkEfYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjY
+        EEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjY
+        EEjYEEjYEEjYEEjYEEjYEOgR9n6zBPo2Dm3q4m9zAPRpfkTdpm6mclkdAv05l+fX+jVtUdr/djt89xLw
+        ea6lNXtcUq4Zhjv0215xMpI8ugAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA3CAYAAAA/prfZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAl1JREFUeF7t1gmLDgAUheFrsiSpSUlKIilJGTtZ+kK2LJMlS2IkEsmkiTThlJSk
+        lJjGkiVryJ4kIUmSJEmSkCRJRrJluy4GkT/w3d5Tz09469i/O+krC0EAikZ5KK1P+O8d+7K8/PjXFXXB
+        ARSdumi4sj7nnzvyqbr86OdqB1DcouU/cR/+uOxhcAAptLODH5YWggNI4v2SStv/tqrywLsqB5CGbO+b
+        xQoOIA3Z7teLFBxAGrKdrxYqOIA0ZNtfLlBwAGnItr6Yp+AA0pBtfj5XwQGkIat5NlvBAaQh2/h0loID
+        SEO24clMBQeQhmz94+kKDiAN2bpH0xQcQBqytQ+mKDiANGRr7k9ScABpyFbfm6DgANKQrbpbruAA0pDp
+        zlgFB5CGbMXt0QoOIA1Z9a2RCg4gDdmym8MVHEAasiU3hio4gDRkVdcHKziANGSLrxUUHEAaskVXByo4
+        gDRkC6/0V3AAacjmX+6r4ADSkM271FvBAaQhm3Oxp4IDSEM2+3w3BQeQhqziXFcFB5CGbMbZLgoOIA3Z
+        9DOdFRxAGrKppzspOIA0ZJNPdVRwAGnIJp7ooOAA0pCNP9ZewQGkIRt3pK2CA0hDNuZQGwUHkIZs1MHW
+        Cg4gDdmI/a0UHEAasmH7Wio4gDRkQ/a0UHAAacgKu0oVHEAaskE7mis4gDRkA7Y3qwgOIA1Zv21Ny4ID
+        SKPCvq/P5sYXggMoenV9tzQp/RF2r9pGZT1rG9YFB1C8etU2LPyI+td61JS0615TcrT7pgYOoMjUlFyI
+        hsvqc/7/yjZaAUDR+Hm9f8/sG9zFRMp0kIs3AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA2CAYAAAD0+mR8AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAASlJREFUeF7t11GNwlAQhtFKqJRKQAKPu+EFKTiohJWwEpCwEpCABJgLJds0COD+
+        OZOcpJ3bPn5pOqzn6/uwLz/lDHRjLtOS8f/UclweuAHdmpekn1OL380DQJ9Or6inzQHQr2sZW9in1RLo
+        307YkEfYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjY
+        EEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjYEEjY
+        EEjYEEjYEEjYEEjYEEjYEOgR9n6zBPo2Dm3q4m9zAPRpfkTdpm6mclkdAv05l+fX+jVtUdr/djt89xLw
+        ea6lNXtcUq4Zhjv0215xMpI8ugAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPYAAAA3CAYAAAA/prfZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAl1JREFUeF7t1gmLDgAUheFrsiSpSUlKIilJGTtZ+kK2LJMlS2IkEsmkiTThlJSk
+        lJjGkiVryJ4kIUmSJEmSkCRJRrJluy4GkT/w3d5Tz09469i/O+krC0EAikZ5KK1P+O8d+7K8/PjXFXXB
+        ARSdumi4sj7nnzvyqbr86OdqB1DcouU/cR/+uOxhcAAptLODH5YWggNI4v2SStv/tqrywLsqB5CGbO+b
+        xQoOIA3Z7teLFBxAGrKdrxYqOIA0ZNtfLlBwAGnItr6Yp+AA0pBtfj5XwQGkIat5NlvBAaQh2/h0loID
+        SEO24clMBQeQhmz94+kKDiAN2bpH0xQcQBqytQ+mKDiANGRr7k9ScABpyFbfm6DgANKQrbpbruAA0pDp
+        zlgFB5CGbMXt0QoOIA1Z9a2RCg4gDdmym8MVHEAasiU3hio4gDRkVdcHKziANGSLrxUUHEAaskVXByo4
+        gDRkC6/0V3AAacjmX+6r4ADSkM271FvBAaQhm3Oxp4IDSEM2+3w3BQeQhqziXFcFB5CGbMbZLgoOIA3Z
+        9DOdFRxAGrKppzspOIA0ZJNPdVRwAGnIJp7ooOAA0pCNP9ZewQGkIRt3pK2CA0hDNuZQGwUHkIZs1MHW
+        Cg4gDdmI/a0UHEAasmH7Wio4gDRkQ/a0UHAAacgKu0oVHEAaskE7mis4gDRkA7Y3qwgOIA1Zv21Ny4ID
+        SKPCvq/P5sYXggMoenV9tzQp/RF2r9pGZT1rG9YFB1C8etU2LPyI+td61JS0615TcrT7pgYOoMjUlFyI
+        hsvqc/7/yjZaAUDR+Hm9f8/sG9zFRMp0kIs3AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAaagAAZgAAAICAAAABACAAKAgBAIBqAABAQAAAAQAgAChCAACocgEAMDAAAAEA
