--- a/BayrakBilmece/Oyun.resx
+++ b/BayrakBilmece/Oyun.resx
@@ -459,14 +459,14 @@
   </data>
   <data name="pictureBox5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAJcAAABbCAYAAAB+tRe2AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAFOSURBVHhe7dXBacNAEEBRlaBSXEJKcwduKIR0kBJUQkpI
-        dk0ExvgU6d/ewIOV5vrZXfZ5//hchzc4wfqX1T2sy/A9/MAJZkuXPa7tYQFn2PZb69USDplxzTfy5RKO
-        EBcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGR
-        ERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGR
-        ERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGR
-        ERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXmRnX+vwTzrDMGYfb8wIOut3jmjM+rsPXwxL+Yxuuy7Is
-        v0OcNDe5j0gRAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAJcAAABbCAYAAAB+tRe2AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAU5JREFUeF7t1cFpw0AQQFGVoFJcQkpzB24ohHSQElRCSkh2TQTG+BTp397Ag5Xm
+        +tld9nn/+FyHNzjB+pfVPazL8D38wAlmS5c9ru1hAWfY9lvr1RIOmXHNN/LlEo4QFxlxkREXGXGRERcZ
+        cZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZ
+        cZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZ
+        cZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZcZERFxlxkREXGXGRERcZ
+        cZERFxlxkREXGXGREReZGdf6/BPOsMwZh9vzAg663eOaMz6uw9fDEv5jG67Lsiy/Q5w0N7mPSBEAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox6.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
